# rust-wgpu-3d-game

./: Cargo.toml  README.md  compile.rs  compiler.py
assets/animations/mutant/: idle.fbx  walk.fbx
assets/models/mutant/: mesh.gltf
assets/models/shapes/: compile.conf  sphere.gltf
src/: adapter.rs  animation.rs  camera.rs  cursor.rs  depth_texture.rs  device.rs  instances.rs  logger.rs  main.rs  mesh.rs  skeleton.rs  surface.rs  texture.rs  transform.rs  vertex.rs  window.rs
src/shaders/: mod.rs
src/shaders/basic/: material.rs  mod.rs  shader.wgsl
src/shaders/basic_anim/: material.rs  mod.rs  shader.wgsl
