[[bin]]
name = "main"
path = "src/main.rs"
[[bin]]
name = "compile"
path = "compile.rs"

[package]
name = "td-rust-game"
version = "0.1.0"
edition = "2021"
default-run = "main"

[dependencies]
wgpu = "0.14.0"
winit = "0.27.3"
log = "0.4.17"
simple_logger = "4.0.0"
futures = "0.3"
bytemuck = { version = "1.8", features = ["derive"] }
cgmath = "0.18.0"
bitflags = "1.3.2"
gltf = "1.0.0"

[dependencies.image]
version = "0.24"
features = ["png", "jpeg"]